--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.2",
     "json-server": "^0.17.1",
     "ng-angular-popup": "^0.2.0",
+    "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
