--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,14 @@
     "json-server": "^0.17.1",
     "jwt-decode": "^3.1.2",
     "ng-angular-popup": "^0.2.0",
+    "ng-toast": "^2.0.0",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.4",
+    "@angular-devkit/build-angular": "^14.2.9",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
