--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node routes.js"
+    "start": "nodemon ./routes/routes.js"
   },
   "author": "",
   "license": "ISC",
