--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
+    "angular-datatables": "^14.0.0",
     "bootstrap": "^5.2.2",
+    "datatables.net": "^1.13.1",
+    "datatables.net-dt": "^1.13.1",
+    "jquery": "^3.6.1",
     "json-server": "^0.17.1",
     "jwt-decode": "^3.1.2",
     "ng-angular-popup": "^0.2.0",
@@ -33,7 +37,9 @@
     "@angular-devkit/build-angular": "^14.2.9",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
