--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
-    "angular-datatables": "^14.0.0",
+    "angular-datatables": "^13.1.0",
+    "apexcharts": "^3.36.3",
     "bootstrap": "^5.2.2",
     "datatables.net": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
@@ -27,6 +28,7 @@
     "json-server": "^0.17.1",
     "jwt-decode": "^3.1.2",
     "ng-angular-popup": "^0.2.0",
+    "ng-apexcharts": "^1.7.4",
     "ng-toast": "^1.5.6",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
