--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "datatables.net-dt": "^1.13.1",
     "jquery": "^3.6.1",
     "json-server": "^0.17.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "ng-angular-popup": "^0.2.0",
     "ng-apexcharts": "^1.7.4",
