--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "ng-apexcharts": "^1.7.4",
     "ng-toast": "^1.5.6",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
